			       =================
				BOGOFILTER NEWS
			       =================

Note: 

  Release 0.16.0 is officially the "Code Clean-up Release - Phase 1".
  Unofficially it's called the "deprecated code release".

  Be sure to read RELEASE.NOTES-0.16 !

0.16.5	2004-01-??

	2004-01-23

	* Correct processing order as '-V' doesn't need to read the
          config file.
	* Correct SIGSEGV causes by missing environment variables.

0.16.4	2004-01-22

	2004-01-20

	* Config options 'thresh_stats' and 'thresh_rtable' have been 
	  deprecated.

	2004-01-19

	* Fix bogus config file warnings from bogolexer.
	* Merge lexer rules to save a few bytes.
	* Additional portability fixes.

0.16.3	2004-01-17

	* Removed optional argument from "-u" flag.
	* Config file options can be put on the command line by using
	  "--option=value" syntax.

0.16.2	2004-01-16

	* Added '-c' (compact) option to bogominitrain.pl

	2004-01-14

	* Tag Cc: lines as To: lines.
	* Allow setting threshold for auto-updating, using the "-u
	  value" flag or the "thresh_update=value" option.
	* Minor FAQ updates.

	2004-01-12

	* Pass -mieee to GCC on machines that know this option (Alpha, SH).
	  Prevents SIGFPE and program termination with coredumps in some
	  conditions. Reported by Paul Ackersville, fix suggested by Clint
	  Adams.

	* Fix defined minimum autoconf/automake versions to match actual
	  requirements: autoconf 2.54, automake 1.7.

	* Change AS_HELP_STRING to AC_HELP_STRING for compatibility with older
	  autoconf than version 2.58.

	* Fix two compiler warnings in BerkeleyDB data store code. It is
	  unknown whether one has real-world impact when opening data bases,
	  fixing nonetheless. The other is cosmetic in any case.

0.16.1	2004-01-08

	2004-01-07

	* Ignore X-Bogosity lines in message header.

	2004-01-04

	* Updated bogotune man page.
	* Fixed minor errors in bogotune.
	* Corrected memory leaks affecting bogotune.

	2004-01-03

	* Added additional ifdefs for deprecated code.